add `simulate_RBD` notebook that simulates RBD antibody mix

--- a/notebooks/biophysical_model.ipynb
+++ b/notebooks/biophysical_model.ipynb
@@ -4,7 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Biophysical model for mutational effects on polyclonal antibody escape\n",
+    "# Biophysical model\n",
+    "Here we describe the biophysical model that motivates the modeling in this package.\n",
+    "\n",
     "Consider a viral protein bound by polyclonal antibodies, such as might be found in sera.\n",
     "We want to determine the contribution of each mutation to escaping these polyclonal antibodies, being cognizant of the fact that different antibodies target different epitopes.\n",
     "\n",
@@ -53,6 +55,13 @@
     "\n",
     "These equations relate the quantities of biological interest ($a_{\\rm{wt}, e}$ and $\\beta_{m,e}$) to the experimental measurables ($p_v\\left(c\\right)$)."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
