fix noisy simulation

--- a/notebooks/simulate_RBD.ipynb
+++ b/notebooks/simulate_RBD.ipynb
@@ -19,11 +19,11 @@
    "execution_count": 1,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-11-07T14:53:05.873501Z",
-     "iopub.status.busy": "2021-11-07T14:53:05.872971Z",
-     "iopub.status.idle": "2021-11-07T14:53:07.374612Z",
-     "shell.execute_reply": "2021-11-07T14:53:07.373929Z",
-     "shell.execute_reply.started": "2021-11-07T14:53:05.873366Z"
+     "iopub.execute_input": "2021-11-08T00:25:29.321120Z",
+     "iopub.status.busy": "2021-11-08T00:25:29.320949Z",
+     "iopub.status.idle": "2021-11-08T00:25:30.733626Z",
+     "shell.execute_reply": "2021-11-08T00:25:30.732794Z",
+     "shell.execute_reply.started": "2021-11-08T00:25:29.321066Z"
     },
     "tags": []
    },
@@ -84,11 +84,11 @@
    "execution_count": 2,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-11-07T14:53:07.377892Z",
-     "iopub.status.busy": "2021-11-07T14:53:07.377750Z",
-     "iopub.status.idle": "2021-11-07T14:53:13.396794Z",
-     "shell.execute_reply": "2021-11-07T14:53:13.395827Z",
-     "shell.execute_reply.started": "2021-11-07T14:53:07.377873Z"
+     "iopub.execute_input": "2021-11-08T00:25:30.734725Z",
+     "iopub.status.busy": "2021-11-08T00:25:30.734474Z",
+     "iopub.status.idle": "2021-11-08T00:25:36.680625Z",
+     "shell.execute_reply": "2021-11-08T00:25:36.679737Z",
+     "shell.execute_reply.started": "2021-11-08T00:25:30.734705Z"
     },
     "tags": []
    },
@@ -142,11 +142,11 @@
    "execution_count": 3,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-11-07T14:53:13.400965Z",
-     "iopub.status.busy": "2021-11-07T14:53:13.400732Z",
-     "iopub.status.idle": "2021-11-07T14:53:14.042888Z",
-     "shell.execute_reply": "2021-11-07T14:53:14.041976Z",
-     "shell.execute_reply.started": "2021-11-07T14:53:13.400945Z"
+     "iopub.execute_input": "2021-11-08T00:25:36.681845Z",
+     "iopub.status.busy": "2021-11-08T00:25:36.681694Z",
+     "iopub.status.idle": "2021-11-08T00:25:37.312116Z",
+     "shell.execute_reply": "2021-11-08T00:25:37.311384Z",
+     "shell.execute_reply.started": "2021-11-08T00:25:36.681829Z"
     },
     "tags": []
    },
@@ -182,11 +182,11 @@
    "execution_count": 4,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-11-07T14:53:14.046402Z",
-     "iopub.status.busy": "2021-11-07T14:53:14.046243Z",
-     "iopub.status.idle": "2021-11-07T14:53:14.650104Z",
-     "shell.execute_reply": "2021-11-07T14:53:14.649607Z",
-     "shell.execute_reply.started": "2021-11-07T14:53:14.046379Z"
+     "iopub.execute_input": "2021-11-08T00:25:37.313367Z",
+     "iopub.status.busy": "2021-11-08T00:25:37.313066Z",
+     "iopub.status.idle": "2021-11-08T00:25:37.952960Z",
+     "shell.execute_reply": "2021-11-08T00:25:37.952323Z",
+     "shell.execute_reply.started": "2021-11-08T00:25:37.313343Z"
     },
     "tags": []
    },
@@ -220,11 +220,11 @@
    "execution_count": 5,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-11-07T14:53:14.652922Z",
-     "iopub.status.busy": "2021-11-07T14:53:14.652806Z",
-     "iopub.status.idle": "2021-11-07T14:53:14.803149Z",
-     "shell.execute_reply": "2021-11-07T14:53:14.802689Z",
-     "shell.execute_reply.started": "2021-11-07T14:53:14.652906Z"
+     "iopub.execute_input": "2021-11-08T00:25:37.954100Z",
+     "iopub.status.busy": "2021-11-08T00:25:37.953840Z",
+     "iopub.status.idle": "2021-11-08T00:25:38.109058Z",
+     "shell.execute_reply": "2021-11-08T00:25:38.108528Z",
+     "shell.execute_reply.started": "2021-11-08T00:25:37.954082Z"
     },
     "tags": []
    },
@@ -386,11 +386,11 @@
    "execution_count": 6,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-11-07T14:53:14.806062Z",
-     "iopub.status.busy": "2021-11-07T14:53:14.805912Z",
-     "iopub.status.idle": "2021-11-07T14:53:16.287868Z",
-     "shell.execute_reply": "2021-11-07T14:53:16.287335Z",
-     "shell.execute_reply.started": "2021-11-07T14:53:14.806042Z"
+     "iopub.execute_input": "2021-11-08T00:25:38.110051Z",
+     "iopub.status.busy": "2021-11-08T00:25:38.109793Z",
+     "iopub.status.idle": "2021-11-08T00:25:39.624034Z",
+     "shell.execute_reply": "2021-11-08T00:25:39.623405Z",
+     "shell.execute_reply.started": "2021-11-08T00:25:38.110033Z"
     },
     "tags": []
    },
@@ -589,11 +589,11 @@
    "execution_count": 7,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-11-07T14:53:16.291098Z",
-     "iopub.status.busy": "2021-11-07T14:53:16.290880Z",
-     "iopub.status.idle": "2021-11-07T14:53:25.912339Z",
-     "shell.execute_reply": "2021-11-07T14:53:25.911360Z",
-     "shell.execute_reply.started": "2021-11-07T14:53:16.291077Z"
+     "iopub.execute_input": "2021-11-08T00:25:39.625102Z",
+     "iopub.status.busy": "2021-11-08T00:25:39.624822Z",
+     "iopub.status.idle": "2021-11-08T00:25:49.420958Z",
+     "shell.execute_reply": "2021-11-08T00:25:49.420108Z",
+     "shell.execute_reply.started": "2021-11-08T00:25:39.625084Z"
     },
     "tags": []
    },
@@ -640,11 +640,11 @@
    "execution_count": 8,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-11-07T14:53:25.917708Z",
-     "iopub.status.busy": "2021-11-07T14:53:25.917351Z",
-     "iopub.status.idle": "2021-11-07T14:53:25.942516Z",
-     "shell.execute_reply": "2021-11-07T14:53:25.942084Z",
-     "shell.execute_reply.started": "2021-11-07T14:53:25.917672Z"
+     "iopub.execute_input": "2021-11-08T00:25:49.422526Z",
+     "iopub.status.busy": "2021-11-08T00:25:49.422277Z",
+     "iopub.status.idle": "2021-11-08T00:25:49.449929Z",
+     "shell.execute_reply": "2021-11-08T00:25:49.449106Z",
+     "shell.execute_reply.started": "2021-11-08T00:25:49.422494Z"
     }
    },
    "outputs": [
@@ -779,11 +779,11 @@
    "execution_count": 9,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-11-07T14:53:25.944817Z",
-     "iopub.status.busy": "2021-11-07T14:53:25.944640Z",
-     "iopub.status.idle": "2021-11-07T14:53:26.304984Z",
-     "shell.execute_reply": "2021-11-07T14:53:26.304494Z",
-     "shell.execute_reply.started": "2021-11-07T14:53:25.944799Z"
+     "iopub.execute_input": "2021-11-08T00:25:49.450906Z",
+     "iopub.status.busy": "2021-11-08T00:25:49.450761Z",
+     "iopub.status.idle": "2021-11-08T00:25:49.972691Z",
+     "shell.execute_reply": "2021-11-08T00:25:49.971875Z",
+     "shell.execute_reply.started": "2021-11-08T00:25:49.450890Z"
     },
     "tags": []
    },
@@ -889,7 +889,7 @@
        "    <tr>\n",
        "      <th>239999</th>\n",
        "      <td>avg2muts</td>\n",
-       "      <td>Y489W</td>\n",
+       "      <td></td>\n",
        "      <td>4.000</td>\n",
        "      <td>0.062843</td>\n",
        "    </tr>\n",
@@ -910,7 +910,7 @@
        "239996  avg2muts      Y489V T500L          4.000     0.000000\n",
        "239997  avg2muts            Y489W          4.000     0.000000\n",
        "239998  avg2muts            Y489W          4.000     0.000000\n",
-       "239999  avg2muts            Y489W          4.000     0.062843\n",
+       "239999  avg2muts                           4.000     0.062843\n",
        "\n",
        "[240000 rows x 4 columns]"
       ]
@@ -928,10 +928,11 @@
     "def add_subtract_mutation(subs):\n",
     "    \"\"\"Sometimes add or subtract a mutation.\"\"\"\n",
     "    subs = subs.split()\n",
+    "    sub_sites = [int(sub[1: -1]) for sub in subs]\n",
     "    rand = numpy.random.random()\n",
     "    if rand < 0.01:  # add mutation with 1% probability\n",
     "        mut = numpy.random.choice(poly_abs.mutations)\n",
-    "        while mut in subs:\n",
+    "        while int(mut[1: -1]) in sub_sites:\n",
     "            mut = numpy.random.choice(poly_abs.mutations)\n",
     "        subs.append(mut)\n",
     "    elif rand > 0.99 and subs:  # subtract mutation with 1% probability\n",
@@ -977,11 +978,11 @@
    "execution_count": 10,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-11-07T14:53:26.306104Z",
-     "iopub.status.busy": "2021-11-07T14:53:26.305829Z",
-     "iopub.status.idle": "2021-11-07T14:53:27.786247Z",
-     "shell.execute_reply": "2021-11-07T14:53:27.785730Z",
-     "shell.execute_reply.started": "2021-11-07T14:53:26.306086Z"
+     "iopub.execute_input": "2021-11-08T00:25:49.973902Z",
+     "iopub.status.busy": "2021-11-08T00:25:49.973611Z",
+     "iopub.status.idle": "2021-11-08T00:25:51.462864Z",
+     "shell.execute_reply": "2021-11-08T00:25:51.461921Z",
+     "shell.execute_reply.started": "2021-11-08T00:25:49.973880Z"
     },
     "tags": []
    },
