tested gradients in `_compute_pv`

--- a/tests/test_compute_pv_grade.ipynb
+++ b/tests/test_compute_pv_grade.ipynb
@@ -16,11 +16,11 @@
    "id": "4cee1ee4-1629-4310-9f65-42e54504f755",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-11-12T20:12:04.218325Z",
-     "iopub.status.busy": "2021-11-12T20:12:04.218107Z",
-     "iopub.status.idle": "2021-11-12T20:12:06.243211Z",
-     "shell.execute_reply": "2021-11-12T20:12:06.242281Z",
-     "shell.execute_reply.started": "2021-11-12T20:12:04.218246Z"
+     "iopub.execute_input": "2021-11-12T20:43:11.658995Z",
+     "iopub.status.busy": "2021-11-12T20:43:11.658784Z",
+     "iopub.status.idle": "2021-11-12T20:43:13.301982Z",
+     "shell.execute_reply": "2021-11-12T20:43:13.301027Z",
+     "shell.execute_reply.started": "2021-11-12T20:43:11.658929Z"
     },
     "tags": []
    },
@@ -92,25 +92,17 @@
    "id": "80de92ae-ef0b-4216-8884-f1b2f8a8106c",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-11-12T20:12:06.246497Z",
-     "iopub.status.busy": "2021-11-12T20:12:06.246354Z",
-     "iopub.status.idle": "2021-11-12T20:12:06.251929Z",
-     "shell.execute_reply": "2021-11-12T20:12:06.251298Z",
-     "shell.execute_reply.started": "2021-11-12T20:12:06.246477Z"
+     "iopub.execute_input": "2021-11-12T20:43:13.305468Z",
+     "iopub.status.busy": "2021-11-12T20:43:13.305307Z",
+     "iopub.status.idle": "2021-11-12T20:43:13.310690Z",
+     "shell.execute_reply": "2021-11-12T20:43:13.310058Z",
+     "shell.execute_reply.started": "2021-11-12T20:43:13.305446Z"
     },
     "tags": []
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'scipy.sparse.coo.coo_matrix'>\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "p_vc, dpvc_da, dpvc_dbeta = polyclonal_data._compute_pv(\n",
+    "p_vc, dpvc_dparams = polyclonal_data._compute_pv(\n",
     "                                params=polyclonal_data._params,\n",
     "                                bmap=polyclonal_data._binarymaps,\n",
     "                                cs=polyclonal_data._cs,\n",
@@ -137,15 +129,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "id": "3091e134-7b11-455b-8495-5b4aa4a80c55",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-11-12T20:17:43.109177Z",
-     "iopub.status.busy": "2021-11-12T20:17:43.108657Z",
-     "iopub.status.idle": "2021-11-12T20:17:43.122192Z",
-     "shell.execute_reply": "2021-11-12T20:17:43.121186Z",
-     "shell.execute_reply.started": "2021-11-12T20:17:43.109128Z"
+     "iopub.execute_input": "2021-11-12T20:43:13.314748Z",
+     "iopub.status.busy": "2021-11-12T20:43:13.314509Z",
+     "iopub.status.idle": "2021-11-12T20:43:13.322553Z",
+     "shell.execute_reply": "2021-11-12T20:43:13.321941Z",
+     "shell.execute_reply.started": "2021-11-12T20:43:13.314726Z"
     },
     "tags": []
    },
@@ -162,10 +154,7 @@
     "                        calc_grad=False,\n",
     "                        )\n",
     "    numerical_grad = (p_vc_eps - p_vc) / eps\n",
-    "    if iparam < 2:\n",
-    "        analytical_grad = dpvc_da[iparam]\n",
-    "    else:\n",
-    "        analytical_grad = dpvc_dbeta.toarray()[iparam - 2]\n",
+    "    analytical_grad = dpvc_dparams[iparam].toarray()\n",
     "    diff = numpy.sqrt(((numerical_grad - analytical_grad)**2).sum())\n",
     "    mag = numpy.sqrt((analytical_grad**2).sum())\n",
     "    if (diff > 1e-7) or (diff / mag > 1e-7):\n",
@@ -175,95 +164,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "034787b0-a04b-4150-bfcd-9597fe71a8ac",
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2021-11-12T20:12:06.274923Z",
-     "iopub.status.busy": "2021-11-12T20:12:06.274628Z",
-     "iopub.status.idle": "2021-11-12T20:12:06.483037Z",
-     "shell.execute_reply": "2021-11-12T20:12:06.482237Z",
-     "shell.execute_reply.started": "2021-11-12T20:12:06.274897Z"
-    },
-    "tags": []
-   },
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'grad' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m/tmp/ipykernel_43838/3885799209.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"numerical:\\n\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mgrad\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0;36m2\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'\\nanalytical:\\n'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdpvc_da\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'grad' is not defined"
-     ]
-    }
-   ],
-   "source": [
-    "print(\"numerical:\\n\", grad[: 2])\n",
-    "\n",
-    "print('\\nanalytical:\\n', dpvc_da)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": null,
-   "id": "b7038a51-2137-4f9b-a605-a19327499251",
-   "metadata": {
-    "execution": {
-     "iopub.status.busy": "2021-11-12T20:12:06.483717Z",
-     "iopub.status.idle": "2021-11-12T20:12:06.483940Z",
-     "shell.execute_reply": "2021-11-12T20:12:06.483837Z",
-     "shell.execute_reply.started": "2021-11-12T20:12:06.483825Z"
-    },
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "polyclonal_data.mut_escape_df"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "730e85b9-8868-4dc7-98a7-4e151850ee8b",
-   "metadata": {
-    "execution": {
-     "iopub.status.busy": "2021-11-12T20:12:06.484825Z",
-     "iopub.status.idle": "2021-11-12T20:12:06.485030Z",
-     "shell.execute_reply": "2021-11-12T20:12:06.484932Z",
-     "shell.execute_reply.started": "2021-11-12T20:12:06.484921Z"
-    },
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "polyclonal_data._a_beta_from_params(polyclonal_data._params)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "4bb49ae0-fa01-40d8-aa06-991b6e2aeba8",
-   "metadata": {
-    "execution": {
-     "iopub.status.busy": "2021-11-12T20:12:06.485887Z",
-     "iopub.status.idle": "2021-11-12T20:12:06.486090Z",
-     "shell.execute_reply": "2021-11-12T20:12:06.485993Z",
-     "shell.execute_reply.started": "2021-11-12T20:12:06.485982Z"
-    },
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "polyclonal_data._params[2:]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c556643c-e71d-4f80-972c-5ac138f30d3e",
+   "id": "d84ba2b7-8da4-4523-9604-6b5dc8680733",
    "metadata": {},
    "outputs": [],
    "source": []
