gradients of pv now fully checked

--- a/tests/test_pv_gradient.ipynb
+++ b/tests/test_pv_gradient.ipynb
@@ -16,11 +16,11 @@
    "id": "4cee1ee4-1629-4310-9f65-42e54504f755",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-11-12T20:43:11.658995Z",
-     "iopub.status.busy": "2021-11-12T20:43:11.658784Z",
-     "iopub.status.idle": "2021-11-12T20:43:13.301982Z",
-     "shell.execute_reply": "2021-11-12T20:43:13.301027Z",
-     "shell.execute_reply.started": "2021-11-12T20:43:11.658929Z"
+     "iopub.execute_input": "2021-11-13T00:28:28.618054Z",
+     "iopub.status.busy": "2021-11-13T00:28:28.617608Z",
+     "iopub.status.idle": "2021-11-13T00:28:29.878687Z",
+     "shell.execute_reply": "2021-11-13T00:28:29.878144Z",
+     "shell.execute_reply.started": "2021-11-13T00:28:28.617988Z"
     },
     "tags": []
    },
@@ -75,6 +75,16 @@
     "                                     ('e2', 1, 0.0), ('e2', 4, 2.0)],\n",
     "                                    columns=['epitope', 'site', 'escape']),\n",
     "                             data_mut_escape_overlap='fill_to_data',\n",
+    "                             )\n",
+    "\n",
+    "# second model doesn't have the same mutations for all concentrations\n",
+    "polyclonal_data2 = Polyclonal(data_to_fit=data_to_fit.head(30),\n",
+    "                             activity_wt_df=activity_wt_df,\n",
+    "                             site_escape_df=pd.DataFrame.from_records(\n",
+    "                                    [('e1', 1, 1.0), ('e1', 4, 0.0),\n",
+    "                                     ('e2', 1, 0.0), ('e2', 4, 2.0)],\n",
+    "                                    columns=['epitope', 'site', 'escape']),\n",
+    "                             data_mut_escape_overlap='fill_to_data',\n",
     "                             )"
    ]
   },
@@ -83,7 +93,7 @@
    "id": "18a525e1-61ca-4d0a-aada-f473450fb19a",
    "metadata": {},
    "source": [
-    "Now compute `p_vc` and `dpvc_dparams`:"
+    "Now compute gradients analytically and numerically and compare:"
    ]
   },
   {
@@ -92,83 +102,62 @@
    "id": "80de92ae-ef0b-4216-8884-f1b2f8a8106c",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-11-12T20:43:13.305468Z",
-     "iopub.status.busy": "2021-11-12T20:43:13.305307Z",
-     "iopub.status.idle": "2021-11-12T20:43:13.310690Z",
-     "shell.execute_reply": "2021-11-12T20:43:13.310058Z",
-     "shell.execute_reply.started": "2021-11-12T20:43:13.305446Z"
+     "iopub.execute_input": "2021-11-13T00:28:29.881656Z",
+     "iopub.status.busy": "2021-11-13T00:28:29.881525Z",
+     "iopub.status.idle": "2021-11-13T00:28:29.899423Z",
+     "shell.execute_reply": "2021-11-13T00:28:29.898872Z",
+     "shell.execute_reply.started": "2021-11-13T00:28:29.881639Z"
     },
     "tags": []
    },
-   "outputs": [],
-   "source": [
-    "p_vc, dpvc_dparams = polyclonal_data._compute_pv(\n",
-    "                                params=polyclonal_data._params,\n",
-    "                                bmap=polyclonal_data._binarymaps,\n",
-    "                                cs=polyclonal_data._cs,\n",
-    "                                calc_grad=True,\n",
-    "                                )"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "484bfe6f-81b3-4497-ba5b-9d3bbfdb754d",
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2021-11-12T19:07:42.892418Z",
-     "iopub.status.busy": "2021-11-12T19:07:42.892104Z",
-     "iopub.status.idle": "2021-11-12T19:07:42.896772Z",
-     "shell.execute_reply": "2021-11-12T19:07:42.896157Z",
-     "shell.execute_reply.started": "2021-11-12T19:07:42.892392Z"
-    },
-    "tags": []
-   },
-   "source": [
-    "Get numerical estimates of gradient and check they are close to analytical estimates:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "id": "3091e134-7b11-455b-8495-5b4aa4a80c55",
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2021-11-12T20:43:13.314748Z",
-     "iopub.status.busy": "2021-11-12T20:43:13.314509Z",
-     "iopub.status.idle": "2021-11-12T20:43:13.322553Z",
-     "shell.execute_reply": "2021-11-12T20:43:13.321941Z",
-     "shell.execute_reply.started": "2021-11-12T20:43:13.314726Z"
-    },
-    "tags": []
-   },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model 0\n",
+      "All gradients check\n",
+      "Model 1\n",
+      "All gradients check\n"
+     ]
+    }
+   ],
    "source": [
     "eps = 1e-8\n",
-    "for iparam in range(len(polyclonal_data._params)):\n",
-    "    eps_vec = numpy.zeros(len(polyclonal_data._params))\n",
-    "    eps_vec[iparam] = eps\n",
-    "    p_vc_eps = polyclonal_data._compute_pv(\n",
-    "                        params=polyclonal_data._params + eps_vec,\n",
-    "                        bmap=polyclonal_data._binarymaps,\n",
-    "                        cs=polyclonal_data._cs,\n",
+    "\n",
+    "for i, model in enumerate([polyclonal_data, polyclonal_data2]):\n",
+    "    \n",
+    "    print(f\"Model {i}\")\n",
+    "    \n",
+    "    # analytical\n",
+    "    p_vc, dpvc_dparams = model._compute_1d_pvs(\n",
+    "                                params=model._params,\n",
+    "                                one_binarymap=model._one_binarymap,\n",
+    "                                binarymaps=model._binarymaps,\n",
+    "                                cs=model._cs,\n",
+    "                                calc_grad=True,\n",
+    "                                )\n",
+    "    \n",
+    "    # numerical, compare to analytical\n",
+    "    for iparam in range(len(model._params)):\n",
+    "        eps_vec = numpy.zeros(len(model._params))\n",
+    "        eps_vec[iparam] = eps\n",
+    "        p_vc_eps = model._compute_1d_pvs(\n",
+    "                        params=model._params + eps_vec,\n",
+    "                        one_binarymap=model._one_binarymap,\n",
+    "                        binarymaps=model._binarymaps,\n",
+    "                        cs=model._cs,\n",
     "                        calc_grad=False,\n",
     "                        )\n",
-    "    numerical_grad = (p_vc_eps - p_vc) / eps\n",
-    "    analytical_grad = dpvc_dparams[iparam].toarray()\n",
-    "    diff = numpy.sqrt(((numerical_grad - analytical_grad)**2).sum())\n",
-    "    mag = numpy.sqrt((analytical_grad**2).sum())\n",
-    "    if (diff > 1e-7) or (diff / mag > 1e-7):\n",
-    "        raise ValueError(f\"{iparam=}, {diff=}, {mag=}\\n\"\n",
-    "                         f\"{analytical_grad=}\\n{numerical_grad=}\")"
+    "        numerical_grad = (p_vc_eps - p_vc) / eps\n",
+    "        analytical_grad = dpvc_dparams[iparam].toarray()\n",
+    "        diff = numpy.sqrt(((numerical_grad - analytical_grad)**2).sum())\n",
+    "        mag = numpy.sqrt((analytical_grad**2).sum())\n",
+    "        if (diff > 1e-7) or (diff / mag > 1e-7):\n",
+    "            raise ValueError(f\"{iparam=}, {diff=}, {mag=}\\n\"\n",
+    "                             f\"{analytical_grad=}\\n{numerical_grad=}\")\n",
+    "    print('All gradients check')"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d84ba2b7-8da4-4523-9604-6b5dc8680733",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
