implemented `_loss_dloss`

--- a/notebooks/optimization.ipynb
+++ b/notebooks/optimization.ipynb
@@ -8,12 +8,12 @@
     "## Loss function\n",
     "\n",
     "We use a [Pseudo-Huber](https://en.wikipedia.org/wiki/Huber_loss#Pseudo-Huber_loss_function) loss function.\n",
-    "Note that the Pseudo-Huber function is defined as $h_{\\delta}\\left(x\\right) = \\delta^2 \\left(\\sqrt{1 + \\left(x/\\delta\\right)^2} - 1\\right)$ where $\\delta$ is a parameter that indicates when the loss transitions from being quadratic (L2-like) to linear (L1-like) in $a$.\n",
-    "Note that we will actually use a loss of $h_{\\delta}\\left(x\\right)/\\delta$ so the slope of the loss is one in the linear range.\n",
+    "Note that the Pseudo-Huber function is defined as $\\hat{h}_{\\delta}\\left(x\\right) = \\delta^2 \\left(\\sqrt{1 + \\left(x/\\delta\\right)^2} - 1\\right)$ where $\\delta$ is a parameter that indicates when the loss transitions from being quadratic (L2-like) to linear (L1-like) in $a$.\n",
+    "Note that we will actually use a scaled Pseudo-Huber function of $h_{\\delta}\\left(x\\right) = \\hat{h}_{\\delta}\\left(x\\right)/\\delta$ so the slope of the loss is one in the linear range.\n",
     "\n",
     "Specifically, let $r_v\\left(c\\right) = p_v\\left(c\\right) - y_{v,c}$ be the residual for the predicted of the escape probability of variant $v$ at concentration $c$, where we are using $y_{v,c}$ to denote the measured value.\n",
-    "Then the loss for variant $v$ at concentration $c$ is $L_{\\delta}\\left(r_v\\left(c\\right)\\right) = h_{\\delta}\\left(r_v\\left(c\\right)\\right)/\\delta$, and the overall loss is:\n",
-    "$$ L = \\sum_{v,c} h_{\\delta}\\left(r_v\\left(c\\right)\\right)/\\delta.$$"
+    "Then the loss for variant $v$ at concentration $c$ is $L_{\\delta}\\left(r_v\\left(c\\right)\\right) = h_{\\delta}\\left(r_v\\left(c\\right)\\right)$, and the overall loss is:\n",
+    "$$ L = \\sum_{v,c} h_{\\delta}\\left(r_v\\left(c\\right)\\right).$$"
    ]
   },
   {
@@ -21,8 +21,24 @@
    "id": "bd6e0904-7d92-4996-a588-f957192311e9",
    "metadata": {},
    "source": [
-    "## Calculating the gradient\n",
-    "Below are calculations of the gradients needed for optimization."
+    "## Gradient of loss function\n",
+    "For the loss function, the gradients are as follows:\n",
+    "\n",
+    "$$\n",
+    "\\frac{\\partial L}{\\partial \\beta_{m,e}} =\n",
+    "\\sum_{v,c}\n",
+    "\\frac{r_v\\left(c\\right)}{h_{\\delta}\\left(r_v\\left(c\\right)\\right) + \\delta}\n",
+    "p_v\\left(c\\right) \\left[1 - U_e\\left(v, c\\right)\\right] b\\left(v\\right)_m\n",
+    "$$\n",
+    "\n",
+    "$$\n",
+    "\\frac{\\partial L}{\\partial a_{\\rm{wt},e}} =\n",
+    "-\\sum_{v,c}\n",
+    "\\frac{r_v\\left(c\\right)}{h_{\\delta}\\left(r_v\\left(c\\right)\\right) + \\delta}\n",
+    "p_v\\left(c\\right) \\left[1 - U_e\\left(v, c\\right)\\right]\n",
+    "$$\n",
+    "\n",
+    "See below for how the sub-components that lead to these were calculated."
    ]
   },
   {
@@ -30,14 +46,13 @@
    "id": "8027e394-8ea5-4db9-8f92-a4a52d74313d",
    "metadata": {},
    "source": [
-    "### Calculating $\\frac{\\partial \\left[h_{\\delta}\\left(x\\right)/\\delta\\right]}{\\partial x}$\n",
+    "#### Calculating $\\frac{\\partial \\left[h_{\\delta}\\left(r\\right)\\right]}{\\partial r}$\n",
     "\n",
     "We have\n",
-    "$$ \\frac{\\partial \\left[h_{\\delta}\\left(x\\right)/\\delta\\right]}{\\partial x}\n",
-    "= \\delta \\frac{\\partial \\left(\\sqrt{1 + \\left(x/\\delta\\right)^2} - 1\\right)}{\\partial x}\n",
-    "= \\frac{\\delta}{2 \\sqrt{1 + \\left(x/\\delta\\right)^2}} \\frac{2x}{\\delta^2}\n",
-    "= \\frac{x}{\\delta \\sqrt{1 + \\left(x/\\delta\\right)^2}}\n",
-    "= \\frac{x}{h_{\\delta}\\left(x\\right)/\\delta + \\delta}\n",
+    "$$ \\frac{\\partial \\left[h_{\\delta}\\left(r\\right)\\right]}{\\partial r}\n",
+    "= \\delta \\frac{\\partial \\left(\\sqrt{1 + \\left(r/\\delta\\right)^2} - 1\\right)}{\\partial r}\n",
+    "= \\frac{\\delta}{2 \\sqrt{1 + \\left(r/\\delta\\right)^2}} \\frac{2r}{\\delta^2}\n",
+    "= \\frac{r}{h_{\\delta}\\left(r\\right) + \\delta}\n",
     "$$"
    ]
   },
@@ -46,7 +61,7 @@
    "id": "a540a53a-ea1d-47f0-bdb0-9ed8221c0ad8",
    "metadata": {},
    "source": [
-    "### Calculating $\\frac{\\partial p_v\\left(c\\right)}{\\partial \\beta_{m,e}}$\n",
+    "#### Calculating $\\frac{\\partial p_v\\left(c\\right)}{\\partial \\beta_{m,e}}$\n",
     "\n",
     "First, note \n",
     "\n",
@@ -71,12 +86,16 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "5e85f881-470b-4afc-9c57-9f1b98ae9bed",
+   "cell_type": "markdown",
+   "id": "08a4f494-0764-44e8-ab25-753b5e9c7ac6",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "#### Calculating $\\frac{\\partial p_v\\left(c\\right)}{\\partial a_{\\rm{wt},e}}$\n",
+    "The only difference from above is the sign, so:\n",
+    "$$\n",
+    "\\frac{\\partial p_v\\left(c\\right)}{\\partial a_{\\rm{wt},e}} = -p_v\\left(c\\right) \\left[1 - U_e\\left(v, c\\right)\\right].\n",
+    "$$"
+   ]
   }
  ],
  "metadata": {
