--- a/tests/test_gradients.ipynb
+++ b/tests/test_gradients.ipynb
@@ -5,9 +5,12 @@
    "id": "8213ebaa-024e-4139-aea1-1c1f42f82390",
    "metadata": {},
    "source": [
-    "# Test analytical derivatives of $p_v\\left(c\\right)$ computed by private methods of `Polyclonal`\n",
+    "# Test analytical gradients\n",
     "\n",
-    "Set up a toy example:"
+    "Set up a toy example, with two different `Polyclonal` objects:\n",
+    " - one with same variants for each concentration\n",
+    " - one with different variants for each concentration\n",
+    "We do both because handled slightly differently internally in `Polyclonal`."
    ]
   },
   {
@@ -16,11 +19,11 @@
    "id": "4cee1ee4-1629-4310-9f65-42e54504f755",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-11-13T00:28:28.618054Z",
-     "iopub.status.busy": "2021-11-13T00:28:28.617608Z",
-     "iopub.status.idle": "2021-11-13T00:28:29.878687Z",
-     "shell.execute_reply": "2021-11-13T00:28:29.878144Z",
-     "shell.execute_reply.started": "2021-11-13T00:28:28.617988Z"
+     "iopub.execute_input": "2021-11-13T13:45:21.180188Z",
+     "iopub.status.busy": "2021-11-13T13:45:21.179884Z",
+     "iopub.status.idle": "2021-11-13T13:45:22.594859Z",
+     "shell.execute_reply": "2021-11-13T13:45:22.594218Z",
+     "shell.execute_reply.started": "2021-11-13T13:45:21.180120Z"
     },
     "tags": []
    },
@@ -93,7 +96,7 @@
    "id": "18a525e1-61ca-4d0a-aada-f473450fb19a",
    "metadata": {},
    "source": [
-    "Now compute gradients analytically and numerically and compare:"
+    "# Gradient of $p_v\\left(c\\right)$"
    ]
   },
   {
@@ -102,11 +105,11 @@
    "id": "80de92ae-ef0b-4216-8884-f1b2f8a8106c",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-11-13T00:28:29.881656Z",
-     "iopub.status.busy": "2021-11-13T00:28:29.881525Z",
-     "iopub.status.idle": "2021-11-13T00:28:29.899423Z",
-     "shell.execute_reply": "2021-11-13T00:28:29.898872Z",
-     "shell.execute_reply.started": "2021-11-13T00:28:29.881639Z"
+     "iopub.execute_input": "2021-11-13T13:45:22.597648Z",
+     "iopub.status.busy": "2021-11-13T13:45:22.597517Z",
+     "iopub.status.idle": "2021-11-13T13:45:22.615383Z",
+     "shell.execute_reply": "2021-11-13T13:45:22.614876Z",
+     "shell.execute_reply.started": "2021-11-13T13:45:22.597631Z"
     },
     "tags": []
    },
@@ -156,6 +159,74 @@
     "        if (diff > 1e-7) or (diff / mag > 1e-7):\n",
     "            raise ValueError(f\"{iparam=}, {diff=}, {mag=}\\n\"\n",
     "                             f\"{analytical_grad=}\\n{numerical_grad=}\")\n",
+    "    print('All gradients check')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2cf615d5-ce7b-4d00-91d2-6d7a52170627",
+   "metadata": {},
+   "source": [
+    "## Gradient of loss on $p_v\\left(c\\right)$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "4cd10913-d096-457f-9dff-af8385c7ddeb",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2021-11-13T13:45:22.617821Z",
+     "iopub.status.busy": "2021-11-13T13:45:22.617638Z",
+     "iopub.status.idle": "2021-11-13T13:45:22.665839Z",
+     "shell.execute_reply": "2021-11-13T13:45:22.665270Z",
+     "shell.execute_reply.started": "2021-11-13T13:45:22.617803Z"
+    },
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model 0\n",
+      "All gradients check\n",
+      "Model 1\n",
+      "All gradients check\n"
+     ]
+    }
+   ],
+   "source": [
+    "eps = 1e-7\n",
+    "\n",
+    "delta = 2\n",
+    "\n",
+    "for i, model in enumerate([polyclonal_data, polyclonal_data2]):\n",
+    "    \n",
+    "    print(f\"Model {i}\")\n",
+    "    \n",
+    "    # analytical\n",
+    "    loss, dloss = model._loss_dloss(\n",
+    "                                params=model._params,\n",
+    "                                delta=2\n",
+    "                                )\n",
+    "    \n",
+    "    # numerical, compare to analytical\n",
+    "    for iparam in range(len(model._params)):\n",
+    "        eps_vec = numpy.zeros(len(model._params))\n",
+    "        eps_vec[iparam] = eps\n",
+    "        loss_eps, _ = model._loss_dloss(\n",
+    "                        params=model._params + eps_vec,\n",
+    "                        delta=2\n",
+    "                        )\n",
+    "        numerical_grad = (loss_eps - loss) / eps\n",
+    "        analytical_grad = dloss[iparam]\n",
+    "        diff = numpy.sqrt((numerical_grad - analytical_grad)**2)\n",
+    "        mag = numpy.sqrt(analytical_grad**2)\n",
+    "        if (diff > 1e-7) or (diff / mag > 1e-6):\n",
+    "            raise ValueError(f\"{iparam=}, {diff=}, {mag=}\\n\"\n",
+    "                             f\"{analytical_grad=}\\n{numerical_grad=}\")\n",
+    "            \n",
     "    print('All gradients check')"
    ]
   }
