add regularization on escape

--- a/notebooks/optimization.ipynb
+++ b/notebooks/optimization.ipynb
@@ -7,13 +7,30 @@
    "source": [
     "## Loss function\n",
     "\n",
-    "We use a [Pseudo-Huber](https://en.wikipedia.org/wiki/Huber_loss#Pseudo-Huber_loss_function) loss function.\n",
+    "We use a scaled [Pseudo-Huber](https://en.wikipedia.org/wiki/Huber_loss#Pseudo-Huber_loss_function) loss function on the difference between the predicted and measure escape proabilities.\n",
     "Note that the Pseudo-Huber function is defined as $\\hat{h}_{\\delta}\\left(x\\right) = \\delta^2 \\left(\\sqrt{1 + \\left(x/\\delta\\right)^2} - 1\\right)$ where $\\delta$ is a parameter that indicates when the loss transitions from being quadratic (L2-like) to linear (L1-like) in $a$.\n",
     "Note that we will actually use a scaled Pseudo-Huber function of $h_{\\delta}\\left(x\\right) = \\hat{h}_{\\delta}\\left(x\\right)/\\delta$ so the slope of the loss is one in the linear range.\n",
+    "The rationale for a Pseudo-Huber loss is to be robust to outliers (L1-like for large residuals).\n",
     "\n",
     "Specifically, let $r_v\\left(c\\right) = p_v\\left(c\\right) - y_{v,c}$ be the residual for the predicted of the escape probability of variant $v$ at concentration $c$, where we are using $y_{v,c}$ to denote the measured value.\n",
-    "Then the loss for variant $v$ at concentration $c$ is $L_{\\delta}\\left(r_v\\left(c\\right)\\right) = h_{\\delta}\\left(r_v\\left(c\\right)\\right)$, and the overall loss is:\n",
-    "$$ L = \\sum_{v,c} h_{\\delta}\\left(r_v\\left(c\\right)\\right).$$"
+    "Then the loss for variant $v$ at concentration $c$ is $L_{\\delta_{\\rm{loss}}}\\left(r_v\\left(c\\right)\\right) = h_{\\delta_{\\rm{loss}}}\\left(r_v\\left(c\\right)\\right)$, and the overall loss is:\n",
+    "$$ L = \\sum_{v,c} h_{\\delta_{\\rm{loss}}}\\left(r_v\\left(c\\right)\\right).$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "14b03b88-b067-4c15-aafa-0b35b52a5ff1",
+   "metadata": {},
+   "source": [
+    "## Regularization\n",
+    "We also regularize the $\\beta_{m,e}$ values based on the notions:\n",
+    "\n",
+    " 1. Most mutations should not mediate escape,\n",
+    " 2. When a site is involved in escape, most mutations at a site will have similar-ish effects.\n",
+    "\n",
+    "### Regularization of escape values \n",
+    "We regularize the escape values $\\beta_{m,e}$ using a simple Pseudo-Huber function, so that\n",
+    "$$R_{\\rm{escape}} = \\sum_{m,e} h_{\\delta_{\\rm{escape}}}\\left(\\beta_{m,e}\\right)$$"
    ]
   },
   {
@@ -21,7 +38,9 @@
    "id": "bd6e0904-7d92-4996-a588-f957192311e9",
    "metadata": {},
    "source": [
-    "## Gradient of loss function\n",
+    "## Gradients used for optimization\n",
+    "\n",
+    "### Gradient of loss function\n",
     "For the loss function, the gradients are as follows:\n",
     "\n",
     "$$\n",
@@ -96,6 +115,26 @@
     "\\frac{\\partial p_v\\left(c\\right)}{\\partial a_{\\rm{wt},e}} = -p_v\\left(c\\right) \\left[1 - U_e\\left(v, c\\right)\\right].\n",
     "$$"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4de0e16c-de3b-499e-8171-329804414755",
+   "metadata": {},
+   "source": [
+    "### Gradients of regularizations\n",
+    "\n",
+    "#### Calculating $\\frac{\\partial R_{\\rm{site\\, escape}}}{\\partial \\beta_{m,e}}$\n",
+    "\n",
+    "$$\\frac{\\partial R_{\\rm{site\\, escape}}}{\\partial \\beta_{m,e}} = \\frac{\\beta_{m,e}}{h_{\\delta_{\\rm{escape}}}\\left(\\beta_{m,e}\\right) + \\delta_{\\rm{escape}}} $$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a21586f5-9802-446b-9e57-030352c0af09",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
