--- a/tests/test_gradients.ipynb
+++ b/tests/test_gradients.ipynb
@@ -19,11 +19,11 @@
    "id": "4cee1ee4-1629-4310-9f65-42e54504f755",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-11-13T13:45:21.180188Z",
-     "iopub.status.busy": "2021-11-13T13:45:21.179884Z",
-     "iopub.status.idle": "2021-11-13T13:45:22.594859Z",
-     "shell.execute_reply": "2021-11-13T13:45:22.594218Z",
-     "shell.execute_reply.started": "2021-11-13T13:45:21.180120Z"
+     "iopub.execute_input": "2021-11-17T16:04:26.506407Z",
+     "iopub.status.busy": "2021-11-17T16:04:26.506145Z",
+     "iopub.status.idle": "2021-11-17T16:04:27.850002Z",
+     "shell.execute_reply": "2021-11-17T16:04:27.849483Z",
+     "shell.execute_reply.started": "2021-11-17T16:04:26.506312Z"
     },
     "tags": []
    },
@@ -105,11 +105,11 @@
    "id": "80de92ae-ef0b-4216-8884-f1b2f8a8106c",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-11-13T13:45:22.597648Z",
-     "iopub.status.busy": "2021-11-13T13:45:22.597517Z",
-     "iopub.status.idle": "2021-11-13T13:45:22.615383Z",
-     "shell.execute_reply": "2021-11-13T13:45:22.614876Z",
-     "shell.execute_reply.started": "2021-11-13T13:45:22.597631Z"
+     "iopub.execute_input": "2021-11-17T16:04:27.850947Z",
+     "iopub.status.busy": "2021-11-17T16:04:27.850757Z",
+     "iopub.status.idle": "2021-11-17T16:04:27.867807Z",
+     "shell.execute_reply": "2021-11-17T16:04:27.867257Z",
+     "shell.execute_reply.started": "2021-11-17T16:04:27.850927Z"
     },
     "tags": []
    },
@@ -176,11 +176,11 @@
    "id": "4cd10913-d096-457f-9dff-af8385c7ddeb",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-11-13T13:45:22.617821Z",
-     "iopub.status.busy": "2021-11-13T13:45:22.617638Z",
-     "iopub.status.idle": "2021-11-13T13:45:22.665839Z",
-     "shell.execute_reply": "2021-11-13T13:45:22.665270Z",
-     "shell.execute_reply.started": "2021-11-13T13:45:22.617803Z"
+     "iopub.execute_input": "2021-11-17T16:04:27.868807Z",
+     "iopub.status.busy": "2021-11-17T16:04:27.868557Z",
+     "iopub.status.idle": "2021-11-17T16:04:27.915004Z",
+     "shell.execute_reply": "2021-11-17T16:04:27.914474Z",
+     "shell.execute_reply.started": "2021-11-17T16:04:27.868787Z"
     },
     "tags": []
    },
@@ -224,6 +224,74 @@
     "        diff = numpy.sqrt((numerical_grad - analytical_grad)**2)\n",
     "        mag = numpy.sqrt(analytical_grad**2)\n",
     "        if (diff > 1e-7) or (diff / mag > 1e-6):\n",
+    "            raise ValueError(f\"{iparam=}, {diff=}, {mag=}\\n\"\n",
+    "                             f\"{analytical_grad=}\\n{numerical_grad=}\")\n",
+    "            \n",
+    "    print('All gradients check')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "37b69b94-1588-4cad-bbb1-8282a90c4675",
+   "metadata": {},
+   "source": [
+    "## Gradient of site escape regularization"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "e6c5bbed-2dde-44bf-9375-ee4b31d673cc",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2021-11-17T16:04:27.915955Z",
+     "iopub.status.busy": "2021-11-17T16:04:27.915749Z",
+     "iopub.status.idle": "2021-11-17T16:04:27.922512Z",
+     "shell.execute_reply": "2021-11-17T16:04:27.921986Z",
+     "shell.execute_reply.started": "2021-11-17T16:04:27.915936Z"
+    },
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model 0\n",
+      "All gradients check\n",
+      "Model 1\n",
+      "All gradients check\n"
+     ]
+    }
+   ],
+   "source": [
+    "eps = 1e-7\n",
+    "\n",
+    "delta = 2\n",
+    "\n",
+    "for i, model in enumerate([polyclonal_data, polyclonal_data2]):\n",
+    "    \n",
+    "    print(f\"Model {i}\")\n",
+    "    \n",
+    "    # analytical\n",
+    "    reg, dreg = model._reg_escape(params=model._params,\n",
+    "                                  weight=0.2,\n",
+    "                                  delta=0.5)\n",
+    "    \n",
+    "    # numerical, compare to analytical\n",
+    "    for iparam in range(len(model._params)):\n",
+    "        eps_vec = numpy.zeros(len(model._params))\n",
+    "        eps_vec[iparam] = eps\n",
+    "        reg_eps, _ = model._reg_escape(\n",
+    "                        params=model._params + eps_vec,\n",
+    "                        weight=0.2,\n",
+    "                        delta=0.5,\n",
+    "                        )\n",
+    "        numerical_grad = (reg_eps - reg) / eps\n",
+    "        analytical_grad = dreg[iparam]\n",
+    "        diff = numpy.sqrt((numerical_grad - analytical_grad)**2)\n",
+    "        mag = numpy.sqrt(analytical_grad**2)\n",
+    "        if (diff > 1e-7) or (mag > 0 and diff / mag > 1e-6):\n",
     "            raise ValueError(f\"{iparam=}, {diff=}, {mag=}\\n\"\n",
     "                             f\"{analytical_grad=}\\n{numerical_grad=}\")\n",
     "            \n",
